# Approx-Dist-Oracles

./: .gitignore  CMakeLists.txt  Presentation.pptx  README.md
doc/: main.tex  pseudocode.txt
src/: ApproxDistanceOracles.cpp  ApproxDistanceOracles.h  Benchmark.cpp  Benchmark.h  Graph.cpp  Graph.h  ado.cpp  analysis.ipynb  distance.cpp  main.cpp  main.h  preprocess.py  querygen.py
tests/: README.md
tests/test1/: graph.txt  parameters.txt  queries.txt
tests/test1/inp/: graph.txt  landmarks.txt  parameters.txt
tests/test10/inp/: graph.txt  queries.txt
tests/test11/inp/: parameters.txt  queries.txt
tests/test12/inp/: parameters.txt  queries.txt
tests/test13/inp/: parameters.txt  queries.txt
tests/test14/inp/: graph.txt  parameters.txt  queries.txt
tests/test15/inp/: parameters.txt  queries.txt
tests/test16/inp/: parameters.txt  queries.txt
tests/test17/inp/: graph.txt  parameters.txt  queries.txt
tests/test18/inp/: parameters.txt  queries.txt
tests/test19/inp/: graph.txt  queries.txt
tests/test2/: graph.txt  parameters.txt
tests/test2/inp/: parameters.txt  queries.txt
tests/test20/inp/: graph.txt  queries.txt
tests/test21/inp/: queries.txt
tests/test22/inp/: queries.txt
tests/test23/inp/: graph.txt  queries.txt
tests/test24/inp/: queries.txt
tests/test3/: graph.txt  parameters.txt  queries.txt
tests/test3/inp/: parameters.txt  queries.txt
tests/test30/inp/: graph.txt  parameters.txt  queries.txt
tests/test31/inp/: queries.txt
tests/test32/inp/: parameters.txt  queries.txt
tests/test33/inp/: parameters.txt  queries.txt
tests/test34/inp/: parameters.txt
tests/test35/inp/: parameters.txt  queries.txt
tests/test36/inp/: parameters.txt  queries.txt
tests/test37/inp/: parameters.txt  queries.txt
tests/test38/: Details.txt
tests/test38/inp/: parameters.txt  queries.txt
tests/test39/inp/: parameters.txt  queries.txt
tests/test4/: parameter.txt  queries.txt
tests/test4/inp/: graph.txt  parameters.txt  queries.txt
tests/test5/: Details.txt
tests/test5/inp/: parameters.txt  queries.txt
visualisation/: README.md  index.html
visualisation/css/: home.css
(+10 files in other folders)
